HYD-3768 - Server alert icons are not centered - Fix server alert icon position issue - Removed the ng-show directives and put ng-if in the parent span - Split the record-state into two spans and creted a new state-label   template. This fixes an edge case where the icons were off centered   after performing a certain sequence of operations (green to red -> red   to green -> green to red again) Change-Id: I27cfd7653a89a1f61c6b3681ef803363a83a204a Reviewed-on: http://review.whamcloud.com/12625 Tested-by: Jenkins Reviewed-by: Joe Grund <joe.grund@intel.com> Reviewed-by: Wayne Kenneth Seymour III <wayne.k.seymour.iii@intel.com>

--- a/chroma-manager/chroma_ui_new/source/chroma_ui/common/status/assets/css/status.less
+++ b/chroma-manager/chroma_ui_new/source/chroma_ui/common/status/assets/css/status.less
@@ -44,3 +44,7 @@
     transform: translate(-44%, 0);
   }
 }
+
+.state-label {
+  margin-left: 10px;
+}
